<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_ActuatorState" Id="{e199bb20-b90c-4b5e-8b72-5106f1ce626b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_ActuatorState :
(
	eIdle,
    eActive,
    eDisabled,
    eError
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>