<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_AxisReadStatus" Id="{19e26c82-ad5f-46a3-beb3-daaa4e7a335d}">
    <Declaration><![CDATA[TYPE ST_AxisReadStatus :
STRUCT
	//Some Status from MC_ReadStatus
	Disabled : BOOL;
	Error : BOOL;
	ErrorID : UDINT;
	Homed : BOOL;
	Operational : BOOL;
	StandStill : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>